# cs234901

./: .gitignore  CMakeLists.txt  IDS.txt  base.cpp  lesson_checks.txt  main.cpp  main.h
Intro/: main.cpp
hw0/: uva_13287.cpp  uva_195.cpp  uva_A.cpp  uva_B.cpp  uva_B.h
hw1/: Canvas Painting.txt  Duathlon.txt  Frequent Values.txt  Invasion.txt  Logo 2.txt  Multitasking.txt  Playing the Slots.txt  Pseudoprime Numbers.txt  Secret Chamber at Mount Rushmore.txt  Top Secret.txt  secretchamber.cpp  uva_10385.cpp  uva_11235.cpp  uva_11287.cpp  uva_11926.cpp  uva_12183.cpp  uva_13017.cpp  uva_A.cpp  uva_B.cpp  uva_B2.cpp  uva_C.cpp  uva_D.cpp  uva_E.cpp  uva_F.cpp  uva_G.cpp  uva_I.cpp  uva_J.cpp
hw2/: A.cpp  Automatic Trading.txt  Avoiding the Apocalypse.txt  C.txt  Canonical Coin Systems.txt  D.cpp  DNA sequencing.txt  E.cpp  F.cpp  G.cpp  G.txt  H.txt  I.cpp  I.txt  Largest Triangle.txt  Optimal Array Multiplication Sequence .txt  Skyline.txt  The Candyman Can.txt  automatictrading.cpp  crowdcontrol.cpp  largesttriangle.cpp  uva10482.cpp  uva_5336.cpp  uva_5336.txt  walrusweights.cpp
hw3/: B.cpp  D.cpp  Finding Paths in Grid .txt  Getting Through.txt  Lift Hopping.txt  Recycling.txt  gettingthrough.cpp  uva_10801.cpp  uva_11486.cpp  uva_11523.cpp
lesson1/: main.cpp  uva_10945.cpp  uva_11364.cpp  uva_156.cpp  uva_573.cpp
lesson10/: cats.cpp  darkness.cpp  millionairemadness.cpp  naturereserve.cpp  transportation.cpp
lesson11/: A.cpp  coke.cpp  linearrecurrence.cpp  pebblesolitaire2.cpp  permutationdescent.cpp  uva12470.cpp
lesson12/: B.cpp  bachetsgame.cpp  cool1.cpp  happyprime.cpp  peggamefortwo.cpp  uva11311.cpp
lesson13/: batmanacci.cpp  blockcrusher.cpp  lostmap.cpp  pascal.cpp  posterize.cpp  supercomputer.cpp  unlockpattern.cpp  uva_1103.cpp  uva_1584.cpp  uva_361.cpp
lesson2/: main.cpp  uva_10954.cpp  uva_11286.cpp  uva_11690.cpp  uva_11933.cpp  uva_E.cpp
lesson3/: A.cpp  B.cpp  C.cpp  flexible.cpp  monk.cpp  nikola.cpp
lesson4/: D.cpp  candydistribution.cpp  inversefactorial.cpp  kitchencombinatorics.cpp  primes2.cpp  prsteni.cpp
lesson5/: brexit.cpp  dominoes2.cpp  dominos.cpp  grid.cpp  hauntedgraveyard.cpp
lesson6/: A.cpp  F.cpp  abstractart.cpp  cursethedarkness.cpp  pointinpolygon.cpp  robotprotection.cpp  stickysituation.cpp
lesson7/: B.cpp  D.cpp  aliens.cpp  heritage.cpp  suffixsorting.cpp
lesson8/: aspenavenue.cpp  errands.cpp  mailbox.cpp  narrowartgallery.cpp  orders.cpp
lesson9/: closestpair1.cpp  countingtriangles.cpp  platforme.cpp  rafting.cpp  roberthood.cpp
