cmake_minimum_required(VERSION 3.10)  # CMake version check
project(competitive)               # Create project
set(CMAKE_CXX_STANDARD 11)            # Enable c++11 standard

# Add main.cpp file of project root directory as source file
set(LESSON1_FILES lesson1/uva_10945.cpp lesson1/uva_11364.cpp lesson1/uva_573.cpp lesson1/uva_156.cpp)
set(HW0_FILES hw0/uva_13287.cpp hw0/uva_195.cpp)
set(LESSON2_FILES lesson2/uva_10954.cpp lesson2/uva_11286.cpp lesson2/uva_11690.cpp lesson2/uva_11933.cpp lesson2/uva_E.cpp)
set(HW1_FILES hw1/uva_A.cpp hw1/uva_B.cpp)
set(MAIN main.cpp)



#

# Add executable target with source files listed in SOURCE_FILES variable
#add_executable(lesson1e ${LESSON1_FILES})
#add_executable(hw0e ${HW0_FILES})
#add_executable(lesson2e ${LESSON2_FILES})
#add_executable(hw1e ${HW1_FILES})
#add_executable(l3A lesson3/A.cpp)
#add_executable(l3B lesson3/B.cpp)
#add_executable(l3C lesson3/C.cpp)
#add_executable(l3D lesson3/D.cpp)
#add_executable(l4A lesson4/A.cpp)
#add_executable(l4B lesson4/B.cpp)
#add_executable(l4C lesson4/C.cpp)
#add_executable(l4D lesson4/D.cpp)
#add_executable(l4E lesson4/E.cpp)
#add_executable(l5A lesson5/A.cpp)
#add_executable(l5B lesson5/B.cpp)
#add_executable(l5C lesson5/C.cpp)
#add_executable(l5D lesson5/D.cpp)
#add_executable(l5E lesson5/E.cpp)
#add_executable(hw1C hw1/uva_C.cpp)
#add_executable(hw1D hw1/uva_D.cpp)
#add_executable(hw1E hw1/uva_E.cpp)
#add_executable(hw1F hw1/uva_F.cpp)
#add_executable(hw1G hw1/uva_G.cpp)
#add_executable(hw1H hw1/uva_H.cpp)
#add_executable(l6A lesson6/A.cpp)
#add_executable(l6F lesson6/F.cpp)
#add_executable(hw1I hw1/uva_I.cpp)
#add_executable(hw1J hw1/uva_J.cpp)
#add_executable(hw2A hw2/A.cpp)
#add_executable(hw2C hw2/C.cpp)
#add_executable(hw2D hw2/D.cpp)
add_executable(hw2E hw2/E.cpp)
add_executable(hw2F hw2/F.cpp)
add_executable(hw2G hw2/G.cpp)
add_executable(hw2H hw2/H.cpp)
#add_executable(hw2B hw2/B.cpp)

#add_executable(l7A lesson7/A.cpp)
#add_executable(l7B lesson7/B.cpp)
#add_executable(l7C lesson7/C.cpp)
#add_executable(l7D lesson7/D.cpp)
#add_executable(l7E lesson7/E.cpp)
#add_executable(l7F lesson7/F.cpp)
#add_executable(l8A lesson8/A.cpp)
#add_executable(l8B lesson8/B.cpp)
#add_executable(l8D lesson8/D.cpp)
#add_executable(l8E lesson8/aspenavenue.cpp)

#add_executable(l9A lesson9/A.cpp)
#add_executable(l9B lesson9/B.cpp)
#add_executable(l9C lesson9/C.cpp)
#add_executable(l9D lesson9/D.cpp)
#add_executable(l9E lesson9/E.cpp)
#add_executable(l10A lesson10/A.cpp)
#add_executable(l10B lesson10/B.cpp)
#add_executable(l10C lesson10/C.cpp)
#add_executable(l10D lesson10/D.cpp)
#add_executable(l10E lesson10/E.cpp)
add_executable(l11A lesson11/A.cpp)
#add_executable(l11B lesson11/B.cpp)
#add_executable(l11C lesson11/C.cpp)
#add_executable(l11D lesson11/D.cpp)
#add_executable(l11E lesson11/E.cpp)